Ajout de commentaires utils à la compréhension du html

--- a/a-la-francaise-menu.html
+++ b/a-la-francaise-menu.html
@@ -194,6 +194,7 @@
         </div>
       </div>
 
+      <!-- Bouton "commander" -->
       <div class="order-button">
         <a href="#" class="restaurant-list-button">Commander</a>
       </div>
