--- a/le-delice-des-sens-menu.html
+++ b/le-delice-des-sens-menu.html
@@ -20,14 +20,17 @@
 
   <body>
 
+    <!-- logo en tête de page -->
     <div class="logo-ohmyfood-section">
       <img src="images\ohmyfood.png" class="logo-ohmyfood" alt="logo ohmyfood">
     </div>
 
+    <!-- image d'accueil page du restaurant -->
     <div>
       <img class="image-presentation" src="images\restaurants\le-delice-des-sens.jpg" alt="restaurant A la française">
     </div>
 
+    <!-- Menu du restaurant -->
     <div class="restaurant-menu">
       <div class="restaurant-name-heart-logo">
         <div class="restaurant-name">
@@ -44,7 +47,7 @@
         <h2 class="menu-name">ENTRÉES</h2>
       </div>
 
-      <!-- div model -->
+      <!-- Div exemple d'assiette - DEBUT -->
       <div class="dish-menu dish-1">
         <div class="compress-style descr-width">
           <h3 class="compress-style">Tartare de thon</h3>
@@ -59,7 +62,7 @@
           <i class="fa-solid fa-circle-check fa-4x check-logo"></i>
         </div>
       </div>
-      <!-- div model -->
+      <!-- Div exemple d'assiette - FIN -->
 
       <div class="dish-menu dish-2">
         <div class="compress-style descr-width">
@@ -191,18 +194,20 @@
         </div>
       </div>
 
+      <!-- Bouton "commander" -->
       <div class="order-button">
         <a href="#" class="restaurant-list-button">Commander</a>
       </div>
     </div>
 
-      <footer>
-        <p>ohmyfood</p>
-        <p><i class="fa-solid fa-utensils fa-fw footer-logo fork"></i>Proposer un restaurant</p>
-        <p><i class="fa-solid fa-handshake-angle fa-fw footer-logo"></i>Devenir partenaire</p>
-        <p>Mentions légales</p>
-        <p>Contact</p>
-      </footer>
+    <!-- pied de page -->
+    <footer>
+      <p>ohmyfood</p>
+      <p><i class="fa-solid fa-utensils fa-fw footer-logo fork"></i>Proposer un restaurant</p>
+      <p><i class="fa-solid fa-handshake-angle fa-fw footer-logo"></i>Devenir partenaire</p>
+      <p>Mentions légales</p>
+      <p>Contact</p>
+    </footer>
 
   </body>
 
