Amélioration de l'animation checked-box. Ajout de href sur la page principale menant aux pages respectives de chaque restaurant.

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     <div class="restaurant-list">
       <h2>Restaurants</h2>
 
+      <a href="la-palette-du-gout-menu.html">
       <div class="restaurant">
         <p class="new">Nouveau</p>
         <img src="images/restaurants/la-palette-du-gout.jpg" alt="restaurant la palette du goût">
@@ -64,7 +65,9 @@
           </div>
         </div>
       </div>
+      </a>
 
+      <a href="la-note-echantee-menu.html">
       <div class="restaurant">
         <p class="new">Nouveau</p>
         <img src="images\restaurants\la-note-enchantee.jpg" alt="restaurant La note enchantée">
@@ -79,7 +82,9 @@
           </div>
         </div>
       </div>
+      </a>
 
+      <a href="a-la-francaise-menu.html">
       <div class="restaurant">
         <img src="images\restaurants\a-la-francaise.jpg" alt="restaurant A la française">
         <div class="restaurant-details-flexbox">
@@ -93,7 +98,9 @@
           </div>
         </div>
       </div>
+      </a>
 
+      <a href="le-delice-des-sens-menu.html">
       <div class="restaurant">
         <img src="images\restaurants\le-delice-des-sens.jpg" alt="restaurant Le délice des sens">
         <div class="restaurant-details-flexbox">
@@ -107,6 +114,7 @@
           </div>
         </div>
       </div>
+      </a>
 
     </div>
 
