Ajout de balises sémantiques

--- a/a-la-francaise-menu.html
+++ b/a-la-francaise-menu.html
@@ -21,184 +21,186 @@
   <body>
 
     <!-- logo en tête de page -->
-    <div class="logo-ohmyfood-section">
+    <header class="logo-ohmyfood-section">
       <img src="images\ohmyfood.png" class="logo-ohmyfood" alt="logo ohmyfood">
-    </div>
+    </header>
 
-    <!-- image d'accueil page du restaurant -->
-    <div>
-      <img class="image-presentation" src="images\restaurants\a-la-francaise.jpg" alt="restaurant A la française">
-    </div>
+    <main>
+      <!-- image d'accueil page du restaurant -->
+      <section>
+        <img class="image-presentation" src="images\restaurants\a-la-francaise.jpg" alt="restaurant A la française">
+      </section>
 
-    <!-- Menu du restaurant -->
-    <div class="restaurant-menu">
-      <div class="restaurant-name-heart-logo">
-        <div class="restaurant-name">
-          <h1 class="title-menu-page">À la française</h1>
-        </div>
-        <div class="div-heart-logo">
-          <a href="#"><i class="fa-regular fa-heart fa-4x heart-logo"></i></a>
-          <a href="#"><i class="fa-solid fa-heart fa-4x heart-logo-colored"></i></a>
-        </div>
-      </div>
-
-      <!-- Entrées -->
-      <div>
-        <h2 class="menu-name">ENTRÉES</h2>
-      </div>
-
-      <!-- Div exemple d'assiette - DEBUT -->
-      <div class="dish-menu dish-1">
-        <div class="compress-style descr-width">
-          <h3 class="compress-style">Tartare de poulpe acidulé</h3>
-          <div class="ingredients-price-spacing">
-            <p class="compress-style paragr-style">Aux zests d'orange</p>
+      <!-- Menu du restaurant -->
+      <section class="restaurant-menu">
+        <div class="restaurant-name-heart-logo">
+          <div class="restaurant-name">
+            <h1 class="title-menu-page">À la française</h1>
+          </div>
+          <div class="div-heart-logo">
+            <a href="#"><i class="fa-regular fa-heart fa-4x heart-logo"></i></a>
+            <a href="#"><i class="fa-solid fa-heart fa-4x heart-logo-colored"></i></a>
           </div>
         </div>
-        <div class="price-moving-div">
-          <p class="price-style">25€</p>
-        </div>
-        <div class="animation-check">
-          <i class="fa-solid fa-circle-check fa-4x check-logo"></i>
-        </div>
-      </div>
-      <!-- Div exemple d'assiette - FIN -->
 
-      <div class="dish-menu dish-2">
-        <div class="compress-style descr-width">
-          <h3 class="compress-style">Velouté de légumes d'antan</h3>
-          <div class="ingredients-price-spacing">
-            <p class="compress-style paragr-style">Carotte, panais, topinambour</p>
+        <!-- Entrées -->
+        <div>
+          <h2 class="menu-name">ENTRÉES</h2>
+        </div>
+
+        <!-- Div exemple d'assiette - DEBUT -->
+        <div class="dish-menu dish-1">
+          <div class="compress-style descr-width">
+            <h3 class="compress-style">Tartare de poulpe acidulé</h3>
+            <div class="ingredients-price-spacing">
+              <p class="compress-style paragr-style">Aux zests d'orange</p>
+            </div>
+          </div>
+          <div class="price-moving-div">
+            <p class="price-style">25€</p>
+          </div>
+          <div class="animation-check">
+            <i class="fa-solid fa-circle-check fa-4x check-logo"></i>
           </div>
         </div>
-        <div class="price-moving-div">
-          <p class="price-style">35€</p>
-        </div>
-        <div class="animation-check">
-          <i class="fa-solid fa-circle-check fa-4x check-logo"></i>
-        </div>
-      </div>
+        <!-- Div exemple d'assiette - FIN -->
 
-      <div class="dish-menu dish-3">
-        <div class="compress-style descr-width">
-          <h3 class="compress-style">Soupe à l'oignon</h3>
-          <div class="ingredients-price-spacing">
-            <p class="compress-style paragr-style">Revisitée</p>
+        <div class="dish-menu dish-2">
+          <div class="compress-style descr-width">
+            <h3 class="compress-style">Velouté de légumes d'antan</h3>
+            <div class="ingredients-price-spacing">
+              <p class="compress-style paragr-style">Carotte, panais, topinambour</p>
+            </div>
+          </div>
+          <div class="price-moving-div">
+            <p class="price-style">35€</p>
+          </div>
+          <div class="animation-check">
+            <i class="fa-solid fa-circle-check fa-4x check-logo"></i>
           </div>
         </div>
-        <div class="price-moving-div">
-          <p class="price-style">20€</p>
-        </div>
-        <div class="animation-check">
-          <i class="fa-solid fa-circle-check fa-4x check-logo"></i>
-        </div>
-      </div>
 
-      <!-- Plats -->
-      <div>
-        <h2 class="menu-name">PLATS</h2>
-      </div>
-
-      <div class="dish-menu dish-1">
-        <div class="compress-style descr-width">
-          <h3 class="compress-style">Coquilles Saint-Jacques</h3>
-          <div class="ingredients-price-spacing">
-            <p class="compress-style paragr-style">Accompagnées d'une purée de panais</p>
+        <div class="dish-menu dish-3">
+          <div class="compress-style descr-width">
+            <h3 class="compress-style">Soupe à l'oignon</h3>
+            <div class="ingredients-price-spacing">
+              <p class="compress-style paragr-style">Revisitée</p>
+            </div>
+          </div>
+          <div class="price-moving-div">
+            <p class="price-style">20€</p>
+          </div>
+          <div class="animation-check">
+            <i class="fa-solid fa-circle-check fa-4x check-logo"></i>
           </div>
         </div>
-        <div class="price-moving-div">
-          <p class="price-style">40€</p>
-        </div>
-        <div class="animation-check">
-          <i class="fa-solid fa-circle-check fa-4x check-logo"></i>
-        </div>
-      </div>
 
-      <div class="dish-menu dish-2">
-        <div class="compress-style descr-width">
-          <h3 class="compress-style">Magret de canard</h3>
-          <div class="ingredients-price-spacing">
-            <p class="compress-style paragr-style">Et parmentier de pommes de terres</p>
+        <!-- Plats -->
+        <div>
+          <h2 class="menu-name">PLATS</h2>
+        </div>
+
+        <div class="dish-menu dish-1">
+          <div class="compress-style descr-width">
+            <h3 class="compress-style">Coquilles Saint-Jacques</h3>
+            <div class="ingredients-price-spacing">
+              <p class="compress-style paragr-style">Accompagnées d'une purée de panais</p>
+            </div>
+          </div>
+          <div class="price-moving-div">
+            <p class="price-style">40€</p>
+          </div>
+          <div class="animation-check">
+            <i class="fa-solid fa-circle-check fa-4x check-logo"></i>
           </div>
         </div>
-        <div class="price-moving-div">
-          <p class="price-style">35€</p>
-        </div>
-        <div class="animation-check">
-          <i class="fa-solid fa-circle-check fa-4x check-logo"></i>
-        </div>
-      </div>
 
-      <div class="dish-menu dish-3">
-        <div class="compress-style descr-width">
-          <h3 class="compress-style">Pigeonneau d'Ille-et-Vilaine</h3>
-          <div class="ingredients-price-spacing">
-            <p class="compress-style paragr-style">Sur son lit de gnocchis aux légumes</p>
+        <div class="dish-menu dish-2">
+          <div class="compress-style descr-width">
+            <h3 class="compress-style">Magret de canard</h3>
+            <div class="ingredients-price-spacing">
+              <p class="compress-style paragr-style">Et parmentier de pommes de terres</p>
+            </div>
+          </div>
+          <div class="price-moving-div">
+            <p class="price-style">35€</p>
+          </div>
+          <div class="animation-check">
+            <i class="fa-solid fa-circle-check fa-4x check-logo"></i>
           </div>
         </div>
-        <div class="price-moving-div">
-          <p class="price-style">44€</p>
-        </div>
-        <div class="animation-check">
-          <i class="fa-solid fa-circle-check fa-4x check-logo"></i>
-        </div>
-      </div>
 
-      <!-- Dessert -->
-      <div>
-        <h2 class="menu-name">DESSERTS</h2>
-      </div>
-
-      <div class="dish-menu dish-1">
-        <div class="compress-style descr-width">
-          <h3 class="compress-style">Pétales de violettes glacés</h3>
-          <div class="ingredients-price-spacing">
-            <p class="compress-style paragr-style">Et purée de noisettes</p>
+        <div class="dish-menu dish-3">
+          <div class="compress-style descr-width">
+            <h3 class="compress-style">Pigeonneau d'Ille-et-Vilaine</h3>
+            <div class="ingredients-price-spacing">
+              <p class="compress-style paragr-style">Sur son lit de gnocchis aux légumes</p>
+            </div>
+          </div>
+          <div class="price-moving-div">
+            <p class="price-style">44€</p>
+          </div>
+          <div class="animation-check">
+            <i class="fa-solid fa-circle-check fa-4x check-logo"></i>
           </div>
         </div>
-        <div class="price-moving-div">
-          <p class="price-style">18€</p>
-        </div>
-        <div class="animation-check">
-          <i class="fa-solid fa-circle-check fa-4x check-logo"></i>
-        </div>
-      </div>
 
-      <div class="dish-menu dish-2">
-        <div class="compress-style descr-width">
-          <h3 class="compress-style">Fondant au chocolat</h3>
-          <div class="ingredients-price-spacing">
-            <p class="compress-style paragr-style">Revisité</p>
+        <!-- Dessert -->
+        <div>
+          <h2 class="menu-name">DESSERTS</h2>
+        </div>
+
+        <div class="dish-menu dish-1">
+          <div class="compress-style descr-width">
+            <h3 class="compress-style">Pétales de violettes glacés</h3>
+            <div class="ingredients-price-spacing">
+              <p class="compress-style paragr-style">Et purée de noisettes</p>
+            </div>
+          </div>
+          <div class="price-moving-div">
+            <p class="price-style">18€</p>
+          </div>
+          <div class="animation-check">
+            <i class="fa-solid fa-circle-check fa-4x check-logo"></i>
           </div>
         </div>
-        <div class="price-moving-div">
-          <p class="price-style">22€</p>
-        </div>
-        <div class="animation-check">
-          <i class="fa-solid fa-circle-check fa-4x check-logo"></i>
-        </div>
-      </div>
 
-      <div class="dish-menu dish-3">
-        <div class="compress-style descr-width">
-          <h3 class="compress-style">Millefeuille croustillant</h3>
-          <div class="ingredients-price-spacing">
-            <p class="compress-style paragr-style">Myrtilles et pâte d'amande</p>
+        <div class="dish-menu dish-2">
+          <div class="compress-style descr-width">
+            <h3 class="compress-style">Fondant au chocolat</h3>
+            <div class="ingredients-price-spacing">
+              <p class="compress-style paragr-style">Revisité</p>
+            </div>
+          </div>
+          <div class="price-moving-div">
+            <p class="price-style">22€</p>
+          </div>
+          <div class="animation-check">
+            <i class="fa-solid fa-circle-check fa-4x check-logo"></i>
           </div>
         </div>
-        <div class="price-moving-div">
-          <p class="price-style">23€</p>
-        </div>
-        <div class="animation-check">
-          <i class="fa-solid fa-circle-check fa-4x check-logo"></i>
-        </div>
-      </div>
 
-      <!-- Bouton "commander" -->
-      <div class="order-button">
-        <a href="#" class="restaurant-list-button">Commander</a>
-      </div>
-    </div>
+        <div class="dish-menu dish-3">
+          <div class="compress-style descr-width">
+            <h3 class="compress-style">Millefeuille croustillant</h3>
+            <div class="ingredients-price-spacing">
+              <p class="compress-style paragr-style">Myrtilles et pâte d'amande</p>
+            </div>
+          </div>
+          <div class="price-moving-div">
+            <p class="price-style">23€</p>
+          </div>
+          <div class="animation-check">
+            <i class="fa-solid fa-circle-check fa-4x check-logo"></i>
+          </div>
+        </div>
+
+        <!-- Bouton "commander" -->
+        <div class="order-button">
+          <a href="#" class="restaurant-list-button">Commander</a>
+        </div>
+      </section>
+    </main>
 
     <!-- pied de page -->
     <footer>
