--- a/la-palette-du-gout-menu.html
+++ b/la-palette-du-gout-menu.html
@@ -21,184 +21,186 @@
   <body>
 
     <!-- logo en tête de page -->
-    <div class="logo-ohmyfood-section">
+    <header class="logo-ohmyfood-section">
       <img src="images\ohmyfood.png" class="logo-ohmyfood" alt="logo ohmyfood">
-    </div>
+    </header>
 
-    <!-- image d'accueil page du restaurant -->
-    <div>
-      <img class="image-presentation" src="images\restaurants\la-palette-du-gout.jpg" alt="restaurant A la française">
-    </div>
+    <main>
+      <!-- image d'accueil page du restaurant -->
+      <section>
+        <img class="image-presentation" src="images\restaurants\la-palette-du-gout.jpg" alt="restaurant A la française">
+      </section>
 
-    <!-- Menu du restaurant -->
-    <div class="restaurant-menu">
-      <div class="restaurant-name-heart-logo">
-        <div class="restaurant-name">
-          <h1 class="title-menu-page">La palette du goût</h1>
-        </div>
-        <div class="div-heart-logo">
-          <a href="#"><i class="fa-regular fa-heart fa-4x heart-logo"></i></a>
-          <a href="#"><i class="fa-solid fa-heart fa-4x heart-logo-colored"></i></a>
-        </div>
-      </div>
-
-      <!-- Entrées -->
-      <div>
-        <h2 class="menu-name">ENTRÉES</h2>
-      </div>
-
-      <!-- Div exemple d'assiette - DEBUT -->
-      <div class="dish-menu dish-1">
-        <div class="compress-style descr-width">
-          <h3 class="compress-style">Fricasée d'escargot</h3>
-          <div class="ingredients-price-spacing">
-            <p class="compress-style paragr-style">Au piment d'espelette</p>
+      <!-- Menu du restaurant -->
+      <section class="restaurant-menu">
+        <div class="restaurant-name-heart-logo">
+          <div class="restaurant-name">
+            <h1 class="title-menu-page">La palette du goût</h1>
+          </div>
+          <div class="div-heart-logo">
+            <a href="#"><i class="fa-regular fa-heart fa-4x heart-logo"></i></a>
+            <a href="#"><i class="fa-solid fa-heart fa-4x heart-logo-colored"></i></a>
           </div>
         </div>
-        <div class="price-moving-div">
-          <p class="price-style">25€</p>
-        </div>
-        <div class="animation-check">
-          <i class="fa-solid fa-circle-check fa-4x check-logo"></i>
-        </div>
-      </div>
-      <!-- Div exemple d'assiette - FIN -->
 
-      <div class="dish-menu dish-2">
-        <div class="compress-style descr-width">
-          <h3 class="compress-style">Foie gras de canard mi-cuit</h3>
-          <div class="ingredients-price-spacing">
-            <p class="compress-style paragr-style">Et ses copeaux de truffe noire</p>
+        <!-- Entrées -->
+        <div>
+          <h2 class="menu-name">ENTRÉES</h2>
+        </div>
+
+        <!-- Div exemple d'assiette - DEBUT -->
+        <div class="dish-menu dish-1">
+          <div class="compress-style descr-width">
+            <h3 class="compress-style">Fricasée d'escargot</h3>
+            <div class="ingredients-price-spacing">
+              <p class="compress-style paragr-style">Au piment d'espelette</p>
+            </div>
+          </div>
+          <div class="price-moving-div">
+            <p class="price-style">25€</p>
+          </div>
+          <div class="animation-check">
+            <i class="fa-solid fa-circle-check fa-4x check-logo"></i>
           </div>
         </div>
-        <div class="price-moving-div">
-          <p class="price-style">35€</p>
-        </div>
-        <div class="animation-check">
-          <i class="fa-solid fa-circle-check fa-4x check-logo"></i>
-        </div>
-      </div>
+        <!-- Div exemple d'assiette - FIN -->
 
-      <div class="dish-menu dish-3">
-        <div class="compress-style descr-width">
-          <h3 class="compress-style">Oeuf au plat</h3>
-          <div class="ingredients-price-spacing">
-            <p class="compress-style paragr-style">Assaisonné à la truffe sur lit de caviar</p>
+        <div class="dish-menu dish-2">
+          <div class="compress-style descr-width">
+            <h3 class="compress-style">Foie gras de canard mi-cuit</h3>
+            <div class="ingredients-price-spacing">
+              <p class="compress-style paragr-style">Et ses copeaux de truffe noire</p>
+            </div>
+          </div>
+          <div class="price-moving-div">
+            <p class="price-style">35€</p>
+          </div>
+          <div class="animation-check">
+            <i class="fa-solid fa-circle-check fa-4x check-logo"></i>
           </div>
         </div>
-        <div class="price-moving-div">
-          <p class="price-style">20€</p>
-        </div>
-        <div class="animation-check">
-          <i class="fa-solid fa-circle-check fa-4x check-logo"></i>
-        </div>
-      </div>
 
-      <!-- Plats -->
-      <div>
-        <h2 class="menu-name">PLATS</h2>
-      </div>
-
-      <div class="dish-menu dish-1">
-        <div class="compress-style descr-width">
-          <h3 class="compress-style">Filet de boeuf aux herbes</h3>
-          <div class="ingredients-price-spacing">
-            <p class="compress-style paragr-style">Accompagné de sa ribambelle de légumes</p>
+        <div class="dish-menu dish-3">
+          <div class="compress-style descr-width">
+            <h3 class="compress-style">Oeuf au plat</h3>
+            <div class="ingredients-price-spacing">
+              <p class="compress-style paragr-style">Assaisonné à la truffe sur lit de caviar</p>
+            </div>
+          </div>
+          <div class="price-moving-div">
+            <p class="price-style">20€</p>
+          </div>
+          <div class="animation-check">
+            <i class="fa-solid fa-circle-check fa-4x check-logo"></i>
           </div>
         </div>
-        <div class="price-moving-div">
-          <p class="price-style">40€</p>
-        </div>
-        <div class="animation-check">
-          <i class="fa-solid fa-circle-check fa-4x check-logo"></i>
-        </div>
-      </div>
 
-      <div class="dish-menu dish-2">
-        <div class="compress-style descr-width">
-          <h3 class="compress-style">Parmentier de queue de boeuf</h3>
-          <div class="ingredients-price-spacing">
-            <p class="compress-style paragr-style">À la truffe noire sur sa purée de panais</p>
+        <!-- Plats -->
+        <div>
+          <h2 class="menu-name">PLATS</h2>
+        </div>
+
+        <div class="dish-menu dish-1">
+          <div class="compress-style descr-width">
+            <h3 class="compress-style">Filet de boeuf aux herbes</h3>
+            <div class="ingredients-price-spacing">
+              <p class="compress-style paragr-style">Accompagné de sa ribambelle de légumes</p>
+            </div>
+          </div>
+          <div class="price-moving-div">
+            <p class="price-style">40€</p>
+          </div>
+          <div class="animation-check">
+            <i class="fa-solid fa-circle-check fa-4x check-logo"></i>
           </div>
         </div>
-        <div class="price-moving-div">
-          <p class="price-style">35€</p>
-        </div>
-        <div class="animation-check">
-          <i class="fa-solid fa-circle-check fa-4x check-logo"></i>
-        </div>
-      </div>
 
-      <div class="dish-menu dish-3">
-        <div class="compress-style descr-width">
-          <h3 class="compress-style">Filet de Turbot</h3>
-          <div class="ingredients-price-spacing">
-            <p class="compress-style paragr-style">Aux agrumes</p>
+        <div class="dish-menu dish-2">
+          <div class="compress-style descr-width">
+            <h3 class="compress-style">Parmentier de queue de boeuf</h3>
+            <div class="ingredients-price-spacing">
+              <p class="compress-style paragr-style">À la truffe noire sur sa purée de panais</p>
+            </div>
+          </div>
+          <div class="price-moving-div">
+            <p class="price-style">35€</p>
+          </div>
+          <div class="animation-check">
+            <i class="fa-solid fa-circle-check fa-4x check-logo"></i>
           </div>
         </div>
-        <div class="price-moving-div">
-          <p class="price-style">44€</p>
-        </div>
-        <div class="animation-check">
-          <i class="fa-solid fa-circle-check fa-4x check-logo"></i>
-        </div>
-      </div>
 
-      <!-- Dessert -->
-      <div>
-        <h2 class="menu-name">DESSERTS</h2>
-      </div>
-
-      <div class="dish-menu dish-1">
-        <div class="compress-style descr-width">
-          <h3 class="compress-style">Paris-Brest</h3>
-          <div class="ingredients-price-spacing">
-            <p class="compress-style paragr-style">Revisité</p>
+        <div class="dish-menu dish-3">
+          <div class="compress-style descr-width">
+            <h3 class="compress-style">Filet de Turbot</h3>
+            <div class="ingredients-price-spacing">
+              <p class="compress-style paragr-style">Aux agrumes</p>
+            </div>
+          </div>
+          <div class="price-moving-div">
+            <p class="price-style">44€</p>
+          </div>
+          <div class="animation-check">
+            <i class="fa-solid fa-circle-check fa-4x check-logo"></i>
           </div>
         </div>
-        <div class="price-moving-div">
-          <p class="price-style">18€</p>
-        </div>
-        <div class="animation-check">
-          <i class="fa-solid fa-circle-check fa-4x check-logo"></i>
-        </div>
-      </div>
 
-      <div class="dish-menu dish-2">
-        <div class="compress-style descr-width">
-          <h3 class="compress-style">Macaron au chocolat d'exception</h3>
-          <div class="ingredients-price-spacing">
-            <p class="compress-style paragr-style">Et glace à la vanille de Madagascar</p>
+        <!-- Dessert -->
+        <div>
+          <h2 class="menu-name">DESSERTS</h2>
+        </div>
+
+        <div class="dish-menu dish-1">
+          <div class="compress-style descr-width">
+            <h3 class="compress-style">Paris-Brest</h3>
+            <div class="ingredients-price-spacing">
+              <p class="compress-style paragr-style">Revisité</p>
+            </div>
+          </div>
+          <div class="price-moving-div">
+            <p class="price-style">18€</p>
+          </div>
+          <div class="animation-check">
+            <i class="fa-solid fa-circle-check fa-4x check-logo"></i>
           </div>
         </div>
-        <div class="price-moving-div">
-          <p class="price-style">22€</p>
-        </div>
-        <div class="animation-check">
-          <i class="fa-solid fa-circle-check fa-4x check-logo"></i>
-        </div>
-      </div>
 
-      <div class="dish-menu dish-3">
-        <div class="compress-style descr-width">
-          <h3 class="compress-style">Mousse au chocolat</h3>
-          <div class="ingredients-price-spacing">
-            <p class="compress-style paragr-style">Au piment d'espelette et à la truffe noire</p>
+        <div class="dish-menu dish-2">
+          <div class="compress-style descr-width">
+            <h3 class="compress-style">Macaron au chocolat d'exception</h3>
+            <div class="ingredients-price-spacing">
+              <p class="compress-style paragr-style">Et glace à la vanille de Madagascar</p>
+            </div>
+          </div>
+          <div class="price-moving-div">
+            <p class="price-style">22€</p>
+          </div>
+          <div class="animation-check">
+            <i class="fa-solid fa-circle-check fa-4x check-logo"></i>
           </div>
         </div>
-        <div class="price-moving-div">
-          <p class="price-style">23€</p>
-        </div>
-        <div class="animation-check">
-          <i class="fa-solid fa-circle-check fa-4x check-logo"></i>
-        </div>
-      </div>
 
-      <!-- Bouton "commander" -->
-      <div class="order-button">
-        <a href="#" class="restaurant-list-button">Commander</a>
-      </div>
-    </div>
+        <div class="dish-menu dish-3">
+          <div class="compress-style descr-width">
+            <h3 class="compress-style">Mousse au chocolat</h3>
+            <div class="ingredients-price-spacing">
+              <p class="compress-style paragr-style">Au piment d'espelette et à la truffe noire</p>
+            </div>
+          </div>
+          <div class="price-moving-div">
+            <p class="price-style">23€</p>
+          </div>
+          <div class="animation-check">
+            <i class="fa-solid fa-circle-check fa-4x check-logo"></i>
+          </div>
+        </div>
+
+        <!-- Bouton "commander" -->
+        <div class="order-button">
+          <a href="#" class="restaurant-list-button">Commander</a>
+        </div>
+      </section>
+    </main>
 
     <!-- pied de page -->
     <footer>
