--- a/la-note-echantee-menu.html
+++ b/la-note-echantee-menu.html
@@ -21,199 +21,201 @@
   <body>
 
     <!-- logo en tête de page -->
-    <div class="logo-ohmyfood-section">
+    <header class="logo-ohmyfood-section">
       <img src="images\ohmyfood.png" class="logo-ohmyfood" alt="logo ohmyfood">
-    </div>
+    </header>
 
-    <!-- image d'accueil page du restaurant -->
-    <div>
-      <img class="image-presentation" src="images\restaurants\la-note-enchantee.jpg" alt="restaurant A la française">
-    </div>
+    <main>
+      <!-- image d'accueil page du restaurant -->
+      <section>
+        <img class="image-presentation" src="images\restaurants\la-note-enchantee.jpg" alt="restaurant A la française">
+      </section>
 
-    <!-- Menu du restaurant -->
-    <div class="restaurant-menu">
-      <div class="restaurant-name-heart-logo">
-        <div class="restaurant-name">
-          <h1 class="title-menu-page">La note enchantée</h1>
-        </div>
-        <div class="div-heart-logo">
-          <a href="#"><i class="fa-regular fa-heart fa-4x heart-logo"></i></a>
-          <a href="#"><i class="fa-solid fa-heart fa-4x heart-logo-colored"></i></a>
-        </div>
-      </div>
-
-      <!-- Entrées -->
-      <div>
-        <h2 class="menu-name">ENTRÉES</h2>
-      </div>
-
-      <!-- Div exemple d'assiette - DEBUT -->
-      <div class="dish-menu dish-1">
-        <div class="compress-style descr-width">
-          <h3 class="compress-style">Ravioles de foie gras</h3>
-          <div class="ingredients-price-spacing">
-            <p class="compress-style paragr-style">Accompagnés de leur crème à la truffe</p>
+      <!-- Menu du restaurant -->
+      <section class="restaurant-menu">
+        <div class="restaurant-name-heart-logo">
+          <div class="restaurant-name">
+            <h1 class="title-menu-page">La note enchantée</h1>
+          </div>
+          <div class="div-heart-logo">
+            <a href="#"><i class="fa-regular fa-heart fa-4x heart-logo"></i></a>
+            <a href="#"><i class="fa-solid fa-heart fa-4x heart-logo-colored"></i></a>
           </div>
         </div>
-        <div class="price-moving-div">
-          <p class="price-style">25€</p>
-        </div>
-        <div class="animation-check">
-          <i class="fa-solid fa-circle-check fa-4x check-logo"></i>
-        </div>
-      </div>
-      <!-- Div exemple d'assiette - FIN -->
 
-      <div class="dish-menu dish-2">
-        <div class="compress-style descr-width">
-          <h3 class="compress-style">Caviar osciètre</h3>
-          <div class="ingredients-price-spacing">
-            <p class="compress-style paragr-style">Sur blini à la farine de blé noir</p>
+        <!-- Entrées -->
+        <div>
+          <h2 class="menu-name">ENTRÉES</h2>
+        </div>
+
+        <!-- Div exemple d'assiette - DEBUT -->
+        <div class="dish-menu dish-1">
+          <div class="compress-style descr-width">
+            <h3 class="compress-style">Ravioles de foie gras</h3>
+            <div class="ingredients-price-spacing">
+              <p class="compress-style paragr-style">Accompagnés de leur crème à la truffe</p>
+            </div>
+          </div>
+          <div class="price-moving-div">
+            <p class="price-style">25€</p>
+          </div>
+          <div class="animation-check">
+            <i class="fa-solid fa-circle-check fa-4x check-logo"></i>
           </div>
         </div>
-        <div class="price-moving-div">
-          <p class="price-style">35€</p>
-        </div>
-        <div class="animation-check">
-          <i class="fa-solid fa-circle-check fa-4x check-logo"></i>
-        </div>
-      </div>
+        <!-- Div exemple d'assiette - FIN -->
 
-      <div class="dish-menu dish-3">
-        <div class="compress-style descr-width">
-          <h3 class="compress-style">Homard et espuma de potiron</h3>
-          <div class="ingredients-price-spacing">
-            <p class="compress-style paragr-style">Mariné aux zests d'orange</p>
+        <div class="dish-menu dish-2">
+          <div class="compress-style descr-width">
+            <h3 class="compress-style">Caviar osciètre</h3>
+            <div class="ingredients-price-spacing">
+              <p class="compress-style paragr-style">Sur blini à la farine de blé noir</p>
+            </div>
+          </div>
+          <div class="price-moving-div">
+            <p class="price-style">35€</p>
+          </div>
+          <div class="animation-check">
+            <i class="fa-solid fa-circle-check fa-4x check-logo"></i>
           </div>
         </div>
-        <div class="price-moving-div">
-          <p class="price-style">20€</p>
-        </div>
-        <div class="animation-check">
-          <i class="fa-solid fa-circle-check fa-4x check-logo"></i>
-        </div>
-      </div>
 
-      <div class="dish-menu dish-4">
-        <div class="compress-style descr-width">
-          <h3 class="compress-style">Foie gras de canard cuit entier</h3>
-          <div class="ingredients-price-spacing">
-            <p class="compress-style paragr-style">Confiture de figue et pain toasté</p>
+        <div class="dish-menu dish-3">
+          <div class="compress-style descr-width">
+            <h3 class="compress-style">Homard et espuma de potiron</h3>
+            <div class="ingredients-price-spacing">
+              <p class="compress-style paragr-style">Mariné aux zests d'orange</p>
+            </div>
+          </div>
+          <div class="price-moving-div">
+            <p class="price-style">20€</p>
+          </div>
+          <div class="animation-check">
+            <i class="fa-solid fa-circle-check fa-4x check-logo"></i>
           </div>
         </div>
-        <div class="price-moving-div">
-          <p class="price-style">35€</p>
-        </div>
-        <div class="animation-check">
-          <i class="fa-solid fa-circle-check fa-4x check-logo"></i>
-        </div>
-      </div>
 
-      <!-- Plats -->
-      <div>
-        <h2 class="menu-name">PLATS</h2>
-      </div>
-
-      <div class="dish-menu dish-1">
-        <div class="compress-style descr-width">
-          <h3 class="compress-style">Noix de coquilles Saint-Jacques</h3>
-          <div class="ingredients-price-spacing">
-            <p class="compress-style paragr-style">Sur lit de purée de céleri-rave</p>
+        <div class="dish-menu dish-4">
+          <div class="compress-style descr-width">
+            <h3 class="compress-style">Foie gras de canard cuit entier</h3>
+            <div class="ingredients-price-spacing">
+              <p class="compress-style paragr-style">Confiture de figue et pain toasté</p>
+            </div>
+          </div>
+          <div class="price-moving-div">
+            <p class="price-style">35€</p>
+          </div>
+          <div class="animation-check">
+            <i class="fa-solid fa-circle-check fa-4x check-logo"></i>
           </div>
         </div>
-        <div class="price-moving-div">
-          <p class="price-style">40€</p>
-        </div>
-        <div class="animation-check">
-          <i class="fa-solid fa-circle-check fa-4x check-logo"></i>
-        </div>
-      </div>
 
-      <div class="dish-menu dish-2">
-        <div class="compress-style descr-width">
-          <h3 class="compress-style">Langoustine poêlée</h3>
-          <div class="ingredients-price-spacing">
-            <p class="compress-style paragr-style">Purée de patate douce</p>
+        <!-- Plats -->
+        <div>
+          <h2 class="menu-name">PLATS</h2>
+        </div>
+
+        <div class="dish-menu dish-1">
+          <div class="compress-style descr-width">
+            <h3 class="compress-style">Noix de coquilles Saint-Jacques</h3>
+            <div class="ingredients-price-spacing">
+              <p class="compress-style paragr-style">Sur lit de purée de céleri-rave</p>
+            </div>
+          </div>
+          <div class="price-moving-div">
+            <p class="price-style">40€</p>
+          </div>
+          <div class="animation-check">
+            <i class="fa-solid fa-circle-check fa-4x check-logo"></i>
           </div>
         </div>
-        <div class="price-moving-div">
-          <p class="price-style">35€</p>
-        </div>
-        <div class="animation-check">
-          <i class="fa-solid fa-circle-check fa-4x check-logo"></i>
-        </div>
-      </div>
 
-      <div class="dish-menu dish-3">
-        <div class="compress-style descr-width">
-          <h3 class="compress-style">Mijoté de queue de boeuf</h3>
-          <div class="ingredients-price-spacing">
-            <p class="compress-style paragr-style">Et riz sauvage aux zests de citron</p>
+        <div class="dish-menu dish-2">
+          <div class="compress-style descr-width">
+            <h3 class="compress-style">Langoustine poêlée</h3>
+            <div class="ingredients-price-spacing">
+              <p class="compress-style paragr-style">Purée de patate douce</p>
+            </div>
+          </div>
+          <div class="price-moving-div">
+            <p class="price-style">35€</p>
+          </div>
+          <div class="animation-check">
+            <i class="fa-solid fa-circle-check fa-4x check-logo"></i>
           </div>
         </div>
-        <div class="price-moving-div">
-          <p class="price-style">44€</p>
-        </div>
-        <div class="animation-check">
-          <i class="fa-solid fa-circle-check fa-4x check-logo"></i>
-        </div>
-      </div>
 
-      <!-- Dessert -->
-      <div>
-        <h2 class="menu-name">DESSERTS</h2>
-      </div>
-
-      <div class="dish-menu dish-1">
-        <div class="compress-style descr-width">
-          <h3 class="compress-style">Macaron noisette et chocolat</h3>
-          <div class="ingredients-price-spacing">
-            <p class="compress-style paragr-style">Glace au caramel brun et sel de Guérande</p>
+        <div class="dish-menu dish-3">
+          <div class="compress-style descr-width">
+            <h3 class="compress-style">Mijoté de queue de boeuf</h3>
+            <div class="ingredients-price-spacing">
+              <p class="compress-style paragr-style">Et riz sauvage aux zests de citron</p>
+            </div>
+          </div>
+          <div class="price-moving-div">
+            <p class="price-style">44€</p>
+          </div>
+          <div class="animation-check">
+            <i class="fa-solid fa-circle-check fa-4x check-logo"></i>
           </div>
         </div>
-        <div class="price-moving-div">
-          <p class="price-style">18€</p>
-        </div>
-        <div class="animation-check">
-          <i class="fa-solid fa-circle-check fa-4x check-logo"></i>
-        </div>
-      </div>
 
-      <div class="dish-menu dish-2">
-        <div class="compress-style descr-width">
-          <h3 class="compress-style">Baba au rhum revisité</h3>
-          <div class="ingredients-price-spacing">
-            <p class="compress-style paragr-style">Avec son coulis de citron</p>
+        <!-- Dessert -->
+        <div>
+          <h2 class="menu-name">DESSERTS</h2>
+        </div>
+
+        <div class="dish-menu dish-1">
+          <div class="compress-style descr-width">
+            <h3 class="compress-style">Macaron noisette et chocolat</h3>
+            <div class="ingredients-price-spacing">
+              <p class="compress-style paragr-style">Glace au caramel brun et sel de Guérande</p>
+            </div>
+          </div>
+          <div class="price-moving-div">
+            <p class="price-style">18€</p>
+          </div>
+          <div class="animation-check">
+            <i class="fa-solid fa-circle-check fa-4x check-logo"></i>
           </div>
         </div>
-        <div class="price-moving-div">
-          <p class="price-style">22€</p>
-        </div>
-        <div class="animation-check">
-          <i class="fa-solid fa-circle-check fa-4x check-logo"></i>
-        </div>
-      </div>
 
-      <div class="dish-menu dish-3">
-        <div class="compress-style descr-width">
-          <h3 class="compress-style">Tarte au citron meringuée</h3>
-          <div class="ingredients-price-spacing">
-            <p class="compress-style paragr-style">Destructurée</p>
+        <div class="dish-menu dish-2">
+          <div class="compress-style descr-width">
+            <h3 class="compress-style">Baba au rhum revisité</h3>
+            <div class="ingredients-price-spacing">
+              <p class="compress-style paragr-style">Avec son coulis de citron</p>
+            </div>
+          </div>
+          <div class="price-moving-div">
+            <p class="price-style">22€</p>
+          </div>
+          <div class="animation-check">
+            <i class="fa-solid fa-circle-check fa-4x check-logo"></i>
           </div>
         </div>
-        <div class="price-moving-div">
-          <p class="price-style">23€</p>
-        </div>
-        <div class="animation-check">
-          <i class="fa-solid fa-circle-check fa-4x check-logo"></i>
-        </div>
-      </div>
 
-      <!-- Bouton "commander" -->
-      <div class="order-button">
-        <a href="#" class="restaurant-list-button">Commander</a>
-      </div>
-    </div>
+        <div class="dish-menu dish-3">
+          <div class="compress-style descr-width">
+            <h3 class="compress-style">Tarte au citron meringuée</h3>
+            <div class="ingredients-price-spacing">
+              <p class="compress-style paragr-style">Destructurée</p>
+            </div>
+          </div>
+          <div class="price-moving-div">
+            <p class="price-style">23€</p>
+          </div>
+          <div class="animation-check">
+            <i class="fa-solid fa-circle-check fa-4x check-logo"></i>
+          </div>
+        </div>
+
+        <!-- Bouton "commander" -->
+        <div class="order-button">
+          <a href="#" class="restaurant-list-button">Commander</a>
+        </div>
+      </section>
+    </main>
 
     <!-- pied de page -->
     <footer>
