Correction des erreurs des validateurs CSS et HTML

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
   </head>
 
   <body>
-    <headers class="logo-ohmyfood-section">
-      <img src="images\ohmyfood.png" class="logo-ohmyfood" alt="logo ohmyfood">
+    <header class="logo-ohmyfood-section">
+      <img src="images/ohmyfood.png" class="logo-ohmyfood" alt="logo ohmyfood">
     </header>
 
     <main>
@@ -61,8 +61,8 @@
               <p>Ménilmontant</p>
             </div>
             <div class="div-heart-logo">
-              <a href="#"><i class="fa-regular fa-heart fa-4x heart-logo"></i></a>
-              <a href="#"><i class="fa-solid fa-heart fa-4x heart-logo-colored"></i></a>
+              <i class="fa-regular fa-heart fa-4x heart-logo"></i>
+              <i class="fa-solid fa-heart fa-4x heart-logo-colored"></i>
             </div>
           </div>
         </div>
@@ -71,15 +71,15 @@
         <a href="la-note-echantee-menu.html">
         <div class="restaurant">
           <p class="new">Nouveau</p>
-          <img src="images\restaurants\la-note-enchantee.jpg" alt="restaurant La note enchantée">
+          <img src="images/restaurants/la-note-enchantee.jpg" alt="restaurant La note enchantée">
           <div class="restaurant-details-flexbox">
             <div class="restaurant-descr">
               <h3>La note enchantée</h3>
               <p>Charonne</p>
             </div>
             <div class="div-heart-logo">
-              <a href="#"><i class="fa-regular fa-heart fa-4x heart-logo"></i></a>
-              <a href="#"><i class="fa-solid fa-heart fa-4x heart-logo-colored"></i></a>
+              <i class="fa-regular fa-heart fa-4x heart-logo"></i>
+              <i class="fa-solid fa-heart fa-4x heart-logo-colored"></i>
             </div>
           </div>
         </div>
@@ -87,15 +87,15 @@
 
         <a href="a-la-francaise-menu.html">
         <div class="restaurant">
-          <img src="images\restaurants\a-la-francaise.jpg" alt="restaurant A la française">
+          <img src="images/restaurants/a-la-francaise.jpg" alt="restaurant A la française">
           <div class="restaurant-details-flexbox">
             <div class="restaurant-descr">
               <h3>A la française</h3>
               <p>Cité Rouge</p>
             </div>
             <div class="div-heart-logo">
-              <a href="#"><i class="fa-regular fa-heart fa-4x heart-logo"></i></a>
-              <a href="#"><i class="fa-solid fa-heart fa-4x heart-logo-colored"></i></a>
+              <i class="fa-regular fa-heart fa-4x heart-logo"></i>
+              <i class="fa-solid fa-heart fa-4x heart-logo-colored"></i>
             </div>
           </div>
         </div>
@@ -103,15 +103,15 @@
 
         <a href="le-delice-des-sens-menu.html">
         <div class="restaurant">
-          <img src="images\restaurants\le-delice-des-sens.jpg" alt="restaurant Le délice des sens">
+          <img src="images/restaurants/le-delice-des-sens.jpg" alt="restaurant Le délice des sens">
           <div class="restaurant-details-flexbox">
             <div class="restaurant-descr">
             <h3>Le délice des sens</h3>
             <p>Folie-Méricourt</p>
             </div>
             <div class="div-heart-logo">
-              <a href="#"><i class="fa-regular fa-heart fa-4x heart-logo"></i></a>
-              <a href="#"><i class="fa-solid fa-heart fa-4x heart-logo-colored"></i></a>
+              <i class="fa-regular fa-heart fa-4x heart-logo"></i>
+              <i class="fa-solid fa-heart fa-4x heart-logo-colored"></i>
             </div>
           </div>
         </div>
