--- a/la-palette-du-gout-menu.html
+++ b/la-palette-du-gout-menu.html
@@ -22,13 +22,13 @@
 
     <!-- logo en tête de page -->
     <header class="logo-ohmyfood-section">
-      <img src="images\ohmyfood.png" class="logo-ohmyfood" alt="logo ohmyfood">
+      <img src="images/ohmyfood.png" class="logo-ohmyfood" alt="logo ohmyfood">
     </header>
 
     <main>
       <!-- image d'accueil page du restaurant -->
       <section>
-        <img class="image-presentation" src="images\restaurants\la-palette-du-gout.jpg" alt="restaurant A la française">
+        <img class="image-presentation" src="images/restaurants/la-palette-du-gout.jpg" alt="restaurant A la française">
       </section>
 
       <!-- Menu du restaurant -->
