--- a/la-palette-du-gout-menu.html
+++ b/la-palette-du-gout-menu.html
@@ -7,6 +7,7 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/desktop.css">
 
     <!-- google font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
